WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282899
[RISCV] Set some used MacroAssemblerRISCV64 methods to public
https://bugs.webkit.org/show_bug.cgi?id=282899
Summary
[RISCV] Set some used MacroAssemblerRISCV64 methods to public
MingZhu Yan
Reported
2024-11-10 09:13:38 PST
Meet this error during compiling on my riscv64gc board. There I only lists one error,these methods should be public. ```txt /home/debian/repo/WebKit/Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:2714:21: error: 'storeFloat16' is a private member of 'JSC::MacroAss emblerRISCV64' jit.storeFloatl6(m_scratchFPR, CCallHelpers::BaseIndex(scratch2GPR, scratchGPR, CCallHelpers::TimesTwo)); ~~~~^~~~~~~~~~~~ /home/debian/repo/WebKit/Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.h:4907:10: note: declared private here void storeFloat16(FPRegisterID src, BaseIndex address) ^ ```
Attachments
Add attachment
proposed patch, testcase, etc.
MingZhu Yan
Comment 1
2024-11-10 09:27:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36460
EWS
Comment 2
2024-11-10 09:49:20 PST
Committed
286408@main
(11bb72603271): <
https://commits.webkit.org/286408@main
> Reviewed commits have been landed. Closing PR #36460 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-10 09:50:14 PST
<
rdar://problem/139602519
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug