[RISCV] Set some used MacroAssemblerRISCV64 methods to public https://bugs.webkit.org/show_bug.cgi?id=282899

Reviewed by Yusuke Suzuki.

float16 related methods are used in jit, so this patch makes them public

* Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.h:
(JSC::MacroAssemblerRISCV64::loadFloat16):
(JSC::MacroAssemblerRISCV64::storeFloat16):
(JSC::MacroAssemblerRISCV64::convertFloat16ToDouble):
(JSC::MacroAssemblerRISCV64::convertDoubleToFloat16):
(JSC::MacroAssemblerRISCV64::moveZeroToFloat16):
(JSC::MacroAssemblerRISCV64::move16ToFloat16):
(JSC::MacroAssemblerRISCV64::moveFloat16To16):

Canonical link: https://commits.webkit.org/286408@main